Fix cell overflow

--- a/src/index.less
+++ b/src/index.less
@@ -12,6 +12,11 @@
   overflow: visible;
 }
 
+.hide-overflow{
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .jsonView{
   .inset{
     padding-left: 2em;
